--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
                     <div class="widget-row-col-1">
                         <h3 class="widget-title">Về chúng tôi</h3>
                         <div class="widget-row-col-content">
-                            <p>Vy Food là thương hiệu được thành lập vào năm 2022 với tiêu chí đặt chất lượng sản phẩm lên hàng đầu.</p>
+                            <p>Team13's Food là thương hiệu được thành lập vào năm 2025 với tiêu chí đặt chất lượng sản phẩm lên hàng đầu.</p>
                         </div>
                         <div class="widget-social">
                             <div class="widget-social-item">
@@ -535,7 +535,7 @@
     <div class="copyright-wrap">
         <div class="container">
             <div class="copyright-content">
-                <p>Copyright 2022 Vy Food. All Rights Reserved.</p>
+                <p>Copyright 2025 Team13's Food. All Rights Reserved.</p>
             </div>
         </div>
     </div>
